onetouch-frontend/onetouch_template/lb_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qcloud 
    kubernetes.io/ingress.existLbId: lb-3ij29pes
    kubernetes.io/ingress.http-rules: '[{"host":"default.onetouch.com","path":"/","backend":{"serviceName":"dzx-service-default","servicePort":"80"}}]'
  name: onetouch-ingress
  namespace: default
spec:
  rules:
  - host: default.onetouch.com
    http:
      paths:
      - backend:
          serviceName: dzx-service-default
          servicePort: 80
        path: /
